--- a/index.html
+++ b/index.html
@@ -200,8 +200,8 @@
         <div class="container">
             <div class="footer-content">
                 <div class="footer-logo">
-                    <a href="#home" class="logo">HOOP<span>LEAGUE</span></a>
-                    <p>Growing basketball culture since 2010</p>
+                    <a href="#home" class="logo">FITLA<span>HOOPS</span></a>
+                    <p>Growing basketball culture since 2018</p>
                 </div>
                 <div class="footer-links">
                     <h4>Quick Links</h4>
