--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@
                 </div>
             </div>
             <div class="footer-bottom">
-                <p>&copy; 2024 HoopLeague. All rights reserved.</p>
+                <p>&copy; 2025 FitlaHoops. All rights reserved.</p>
                 <div class="footer-cta">
                     <a href="#events" class="btn-primary">Register Now</a>
                 </div>
